FIX: Show tag chooser in composer for PM on mobile
This was not displayed on mobile due to space constraints. With better
organization of the title, category and tags inputs, it can be
displayed.

--- a/app/assets/stylesheets/mobile/compose.scss
+++ b/app/assets/stylesheets/mobile/compose.scss
@@ -206,7 +206,7 @@
     }
 
     .mini-tag-chooser {
-      margin: 0 0 6px 6px;
+      margin: 0 0 8px 6px;
       max-width: calc(50% - 3px);
     }
 
